--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
-    <title>Document</title>
+    <title>Digital Agency</title>
 </head>
 <body>
-    <header>
+    <header class = "header">
         <h1>DIGITAL AGENCY</h1>
         <nav>
             <ul>
@@ -17,6 +17,7 @@
                 <li><a href="#">Contact</a></li>
             </ul>
         </nav>
+        <img src="./assets/menu.png" alt="Menu" class="menu" />
     </header>
     <main>
         <div class = "description">
